resolve gap card kuliner at section kuliner

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -174,8 +174,9 @@ img {
   }
   .swiper {
     .swiper-slide {
-      max-width: 271px!important;
+      max-width: 260px!important;
       img{
+        max-width: 260px!important;
         margin-bottom: 16px;
       }
     }
